testsuite/tests/backpack/should_compile/bkp11.bkp
package p where
    signature H where
        data S
    signature H2 where
        data T
    module A where
        import H
        import H2
        data Z = Z S T

package q where
    include p requires (H, H2 as H)
    module B where
        import H
        import A
        f :: S -> T -> Z
        f = Z
